# template-encore

./: .dockerignore  .env.example  .env.external.example  .env.internal.example  .gitattributes  .gitignore  .prettierrc.json  AGENTS.md  CLAUDE.md  CODEMAP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  PLACEHOLDERS.md  README.md  SECURITY.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  spec-spine.toml  template.json  tsconfig.base.json
.claude/agents/: architect.md  encore-expert.md  explorer.md  implementer.md  reviewer.md
.claude/rules/: governed-artifact-reads.md
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ai-pr-review.yml  ci-supply-chain.yml  ci.yml  deploy-azure-webapp-dev.yml  deploy-azure-webapp-prod.yml  encore-ci.yml  (+10 more)
docker/: README.md
docs/: AUTH-SETUP.md  DEPLOYMENT.md  DEVELOPMENT.md  DUAL-APP-GUIDE.md  GITHUB-ENV-MIGRATION.md  GOA-COMPONENTS.md  MODULARIZATION-OVERVIEW.md  MODULARIZATION-SPEC.md  MODULE-DEVELOPMENT-GUIDE.md  TEMPLATE-USER-GUIDE.md  TESTING.md  TROUBLESHOOTING.md  spec-spine-in-detail.md
experiments/hiqlite-native-spike/addon/: .gitignore  Cargo.toml  package.json  sanity.mjs
experiments/hiqlite-native-spike/addon/src/: lib.rs
orchestration/: template-orchestrator.md
requirements/: business-requirements-document.md
scripts/: clean-template.ts  setup-app.test.ts  setup-app.ts  setup-dual-app.test.ts  setup-dual-app.ts  validate-modules.ts
website/: README.md  docusaurus.config.ts  package-lock.json  sidebars.ts
(+327 files in other folders)
